samples/_failures_safe/1761531531_1ec3dc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af43f284.c: In function ‘main’:
./samples/SAFE/__tmp_af43f284.c:157:12: error: missing terminating " character
  157 |     printf("Disconnected graph
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_af43f284.c:157:5: error: expected expression at end of input
  157 |     printf("Disconnected graph
      |     ^~~~~~
./samples/SAFE/__tmp_af43f284.c:157:5: error: expected declaration or statement at end of input
